Wstępne czyszczenie danych.

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "97c3491e-816c-4bbc-8b5f-4ffc7226f1c0",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "f816017d-a196-4bb0-b996-ed39b0538c33",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "441387cc-a03c-49ba-8239-19f1c4e22894",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "cab8c43a-2d6c-489d-b180-966fc804af47",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "713700f7-b57c-46be-acf6-8849a5111a0f",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "id": "0c441dbd-cc6e-460a-bb2d-947aa55df427",
    "metadata": {},
    "outputs": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "id": "b512808c-b67a-4264-aa49-5874eb978fb4",
    "metadata": {},
    "outputs": [
@@ -628,8 +628,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "850923d9-7a30-45d1-86bc-3f4da6310275",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Braki w kolumnach:\n",
+      " class                       0\n",
+      "cap-shape                   0\n",
+      "cap-surface                 0\n",
+      "cap-color                   0\n",
+      "bruises                     0\n",
+      "odor                        0\n",
+      "gill-attachment             0\n",
+      "gill-spacing                0\n",
+      "gill-size                   0\n",
+      "gill-color                  0\n",
+      "stalk-shape                 0\n",
+      "stalk-root                  0\n",
+      "stalk-surface-above-ring    0\n",
+      "stalk-surface-below-ring    0\n",
+      "stalk-color-above-ring      0\n",
+      "stalk-color-below-ring      0\n",
+      "veil-type                   0\n",
+      "veil-color                  0\n",
+      "ring-number                 0\n",
+      "ring-type                   0\n",
+      "spore-print-color           0\n",
+      "population                  0\n",
+      "habitat                     0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Braki w kolumnach:\\n\", df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d96027d-da28-4d0f-93e9-28bd519cb657",
+   "metadata": {},
+   "source": [
+    "# W tym zbiorze nie ma brakujących wartości."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c5ed123b-c1b4-4915-bafb-c7b089b540b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "29b4ebf1-a0f9-4ee5-b44f-d4dd8150283b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   class  cap-shape  cap-surface  cap-color  bruises  odor  gill-attachment  \\\n",
+      "0      1          5            2          4        1     6                1   \n",
+      "1      0          5            2          9        1     0                1   \n",
+      "2      0          0            2          8        1     3                1   \n",
+      "3      1          5            3          8        1     6                1   \n",
+      "4      0          5            2          3        0     5                1   \n",
+      "\n",
+      "   gill-spacing  gill-size  gill-color  ...  stalk-surface-below-ring  \\\n",
+      "0             0          1           4  ...                         2   \n",
+      "1             0          0           4  ...                         2   \n",
+      "2             0          0           5  ...                         2   \n",
+      "3             0          1           5  ...                         2   \n",
+      "4             1          0           4  ...                         2   \n",
+      "\n",
+      "   stalk-color-above-ring  stalk-color-below-ring  veil-type  veil-color  \\\n",
+      "0                       7                       7          0           2   \n",
+      "1                       7                       7          0           2   \n",
+      "2                       7                       7          0           2   \n",
+      "3                       7                       7          0           2   \n",
+      "4                       7                       7          0           2   \n",
+      "\n",
+      "   ring-number  ring-type  spore-print-color  population  habitat  \n",
+      "0            1          4                  2           3        5  \n",
+      "1            1          4                  3           2        1  \n",
+      "2            1          4                  3           2        3  \n",
+      "3            1          4                  2           3        5  \n",
+      "4            1          0                  3           0        1  \n",
+      "\n",
+      "[5 rows x 23 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_en = df.copy()\n",
+    "le = LabelEncoder()\n",
+    "for col in df_en.columns:\n",
+    "    df_en[col] = le.fit_transform(df_en[col])\n",
+    " \n",
+    "print(df_en.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5c8edbd-fd4e-41b8-bf23-5a9c3d8d5983",
+   "metadata": {},
+   "source": [
+    "# Enkodowanie pozwala zamienić kolumny tekstowe na liczby i przygotować dane dla modelu klasyfikacji."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "029bdcf8-c3ac-4b9a-8e39-dfac9f4d8c35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cap-color\n",
+      "n    0.281142\n",
+      "g    0.226489\n",
+      "e    0.184638\n",
+      "y    0.131955\n",
+      "w    0.128016\n",
+      "b    0.020679\n",
+      "p    0.017725\n",
+      "c    0.005416\n",
+      "u    0.001969\n",
+      "r    0.001969\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['cap-color'].value_counts(normalize=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9520dd3a-95e5-470a-bf0e-3faa23e793d4",
+   "metadata": {},
+   "source": [
+    "# c, u oraz r to najrzadziej występujace wartości w kolumnie \"color\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c67f9576-b030-4543-bf0d-4f88296f1821",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class                        2\n",
+      "cap-shape                    6\n",
+      "cap-surface                  4\n",
+      "cap-color                   10\n",
+      "bruises                      2\n",
+      "odor                         9\n",
+      "gill-attachment              2\n",
+      "gill-spacing                 2\n",
+      "gill-size                    2\n",
+      "gill-color                  12\n",
+      "stalk-shape                  2\n",
+      "stalk-root                   5\n",
+      "stalk-surface-above-ring     4\n",
+      "stalk-surface-below-ring     4\n",
+      "stalk-color-above-ring       9\n",
+      "stalk-color-below-ring       9\n",
+      "veil-type                    1\n",
+      "veil-color                   4\n",
+      "ring-number                  3\n",
+      "ring-type                    5\n",
+      "spore-print-color            9\n",
+      "population                   6\n",
+      "habitat                      7\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.nunique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a5c0e1d-e4cc-4b94-a3d9-58d2a6f3be0c",
+   "metadata": {},
+   "source": [
+    "# W kolumnach występuje mało unikalnych wartości. W zbiorze mushrooms nie ma wartości liczbowych więc wartości odstające nie istnieją, dodatkowo każdy rekord ma zanczenie dla klasyfikacji jadalny/trujący ma znaczenie."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45e0e639-a411-4940-b9c7-eaa96c5fb1fd",
    "metadata": {},
    "outputs": [],
    "source": []
