Wybór metryki ewaluacji.

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -834,12 +834,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45e0e639-a411-4940-b9c7-eaa96c5fb1fd",
+   "cell_type": "markdown",
+   "id": "37cd3d34-0105-4344-a696-a2494b4b2716",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "###Metryka: F1-score\n",
+    "###Uzasadnienie:\n",
+    "##W problemie klasyfikacji grzybów kluczowe jest, żeby uniknąć fałszywego zaklasyfikowania trującego grzyba jako jadalnego.  \n",
+    "##Dlatego ta metryka jest lepszym wyborem, ponieważ uwzględnia oba typy błędów (fałszywie pozytywne oraz fałszywie negatywne)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a8448f7-e23a-4749-abc9-cf582af11e82",
+   "metadata": {},
+   "source": [
+    "**Metryka:** F1-score.\n",
+    "**Uzasadnienie:** W problemie klasyfikacji grzybów ważne jest, żeby uniknąć fałszywego zaklasyfikowania trującego grzyba jako jadalnego. Dlatego ta metryka jest lepszym wyborem niż np. Accuracy, ponieważ uwzględnia oba typy błędów (false-positive oraz false-negative)."
+   ]
   }
  ],
  "metadata": {
