baseline w sklearn logistic regression

--- a/notebooks/02_baseline_ml.ipynb
+++ b/notebooks/02_baseline_ml.ipynb
@@ -6,7 +6,194 @@
    "id": "df2a956c-5efa-4995-995d-612ca0d02197",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Baseline w sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bcfbda75-e8c3-4e2f-a266-6994982c7e47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "train = pd.read_csv(\"../data/data_full/mushroom/agaricus-lepiota.data\", header=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4f0cc545-fab8-4716-af24-59b848bdfb72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+       "       18, 19, 20, 21, 22],\n",
+       "      dtype='int64')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4416a0bb-d2ea-4301-aeed-ddcfaf57ac27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = [\n",
+    "    'class', 'cap-shape', 'cap-surface', 'cap-color', 'bruises', 'odor',\n",
+    "    'gill-attachment', 'gill-spacing', 'gill-size', 'gill-color',\n",
+    "    'stalk-shape', 'stalk-root', 'stalk-surface-above-ring',\n",
+    "    'stalk-surface-below-ring', 'stalk-color-above-ring',\n",
+    "    'stalk-color-below-ring', 'veil-type', 'veil-color', 'ring-number',\n",
+    "    'ring-type', 'spore-print-color', 'population', 'habitat'\n",
+    "]\n",
+    "\n",
+    "train = pd.read_csv(\"../data/data_full/mushroom/agaricus-lepiota.data\", names=columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ed6502e1-3bb6-4912-92e3-874e7166ee3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7678924d-d699-4751-b7ad-aa55f4f560bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   class  cap-shape  cap-surface  cap-color  bruises  odor  gill-attachment  \\\n",
+      "0      1          5            2          4        1     6                1   \n",
+      "1      0          5            2          9        1     0                1   \n",
+      "2      0          0            2          8        1     3                1   \n",
+      "3      1          5            3          8        1     6                1   \n",
+      "4      0          5            2          3        0     5                1   \n",
+      "\n",
+      "   gill-spacing  gill-size  gill-color  ...  stalk-surface-below-ring  \\\n",
+      "0             0          1           4  ...                         2   \n",
+      "1             0          0           4  ...                         2   \n",
+      "2             0          0           5  ...                         2   \n",
+      "3             0          1           5  ...                         2   \n",
+      "4             1          0           4  ...                         2   \n",
+      "\n",
+      "   stalk-color-above-ring  stalk-color-below-ring  veil-type  veil-color  \\\n",
+      "0                       7                       7          0           2   \n",
+      "1                       7                       7          0           2   \n",
+      "2                       7                       7          0           2   \n",
+      "3                       7                       7          0           2   \n",
+      "4                       7                       7          0           2   \n",
+      "\n",
+      "   ring-number  ring-type  spore-print-color  population  habitat  \n",
+      "0            1          4                  2           3        5  \n",
+      "1            1          4                  3           2        1  \n",
+      "2            1          4                  3           2        3  \n",
+      "3            1          4                  2           3        5  \n",
+      "4            1          0                  3           0        1  \n",
+      "\n",
+      "[5 rows x 23 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "le = LabelEncoder()\n",
+    "for col in train.columns:\n",
+    "    train[col] = le.fit_transform(train[col])\n",
+    " \n",
+    "print(train.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b7b7eca1-6140-4b36-8bd4-297fd6ba62d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = train.drop('class', axis=1)\n",
+    "y = train['class']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "69b8f020-46e7-4a09-9eaa-c8c85cb544f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.1, random_state=101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "80a5c1b5-6431-4285-93c4-f691a9908871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logmodel = LogisticRegression(max_iter=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "18816cc3-267c-44cd-9cdf-60d842506a7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logmodel.fit(x_train, y_train)\n",
+    "predictions = logmodel.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "027b78c5-30bf-4f7f-9d74-7c45155cb5be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      0.96      0.95       444\n",
+      "           1       0.95      0.93      0.94       369\n",
+      "\n",
+      "    accuracy                           0.95       813\n",
+      "   macro avg       0.95      0.94      0.95       813\n",
+      "weighted avg       0.95      0.95      0.95       813\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, predictions))"
+   ]
   }
  ],
  "metadata": {
